# APAC-McDelivery-Menu-Logger

./: .breakpoints  .gitignore  README.md  default-schedule.csv  pyproject.toml  reschedule-next-run.py  reschedule_next_run.py  reset-schedule.py  sort-scraped-data.py  update-utcoffset.py
.github/workflows/: inspector.yml  scrape-au-auto.yml  scrape-au-manual.yml  scrape-bn-auto.yml  scrape-fj-auto.yml  scrape-fj-manual.yml  scrape-hk-auto.yml  scrape-hk-manual.yml  scrape-id-auto.yml  scrape-id-manual.yml  scrape-in-auto.yml  scrape-in-manual.yml  scrape-jp-auto.yml  scrape-jp-manual.yml  scrape-kr-auto.yml  scrape-lk-auto.yml  scrape-my-auto.yml  scrape-my-manual.yml  scrape-nz-auto.yml  scrape-nz-manual.yml  scrape-ph-auto.yml  scrape-ph-manual.yml  scrape-pk-auto.yml  scrape-sg-auto.yml  scrape-sg-manual.yml  scrape-th-auto.yml  (+6 more)
mcd-bs4-id/: mcd-bs4-id.py
mcd-bs4-jp/: mcd-bs4-jp-v2.py  mcd-bs4-jp.py
mcd-bs4-kr/: mcd-bs4-kr.py
mcd-bs4-lk/: mcd-bs4-lk.py
mcd-bs4-my/: README.md  mcd-bs4-my.py  mcd-req-my.py
mcd-bs4-pk/: mcd-bs4-pk.py
mcd-bs4-sg/: CHANGELOG.md  README.md  [2022-01-19 11:46:24] mcd-bs4-sg.csv  mcd-bs4-sg.ipynb  mcd-bs4-sg.py  mcd-pwp-sg.py  requirements.txt  scrapy.cfg
mcd-bs4-th/: mcd-bs4-th-v2.py  mcd-bs4-th.py
mcd-bs4-tw/: mcd-bs4-tw.py
mcd-bs4-vn/: mcd-bs4-vn.py  mcd-pwp-vn.py  requirements.txt
mcd-req-in/: mcd-api-in.py  mcd-pwp-in.py  mcd-req-in.py  requirements.txt
mcd-scr-au/: mcd-pwp-au.py  requirements.txt
mcd-scr-nz/: mcd-pwp-nz.py
mcd-scr-ph/: mcd-sel-ph.py
mcd-sel-fj/: mcd-sel-fj.py
mcd-sel-ph/: mcd-sel-ph.py
(+19522 files in other folders)
